# parkpass_backend

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  check_system_script.py  conftest.py  docker-compose.yml  manage.py  pytest.ini  requirements.txt  run_service.sh  runtests.py  uwsgi.ini
MailingScript/: main.py  second_mailing_script.py
TelegramPaymentBot/: bot.py  bot.sh
accounting/: models.py  views.py
accounts/: AccountTypes.py  admin.py  models.py  sms_gateway.py  tasks.py  tests.py  urls.py  validators.py  views.py
auth/: models.py  urls.py  utils.py  views.py
base/: admin.py  decorators.py  enums.py  exceptions.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
control/: admin.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
deploy/: proxy.txt  service.conf  supervisord.conf
dss/: Serializer.py  TimeFormatFactory.py
integration/: run_tests_rps_api.py  services.py  urls.py  views.py
jwtauth/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
lib/OpenXLSX/@examples/c++/: CMakeLists.txt  DataParser.cpp  DataParser.h  Demo1.cpp  Makefile  Writer.cpp  Writer.h
media/: tinkoff_errors.json
middlewares/: AllowCorsMiddleware.py  ApiTokenMiddleware.py
notifications/: admin.py  models.py  tasks.py  urls.py  validators.py  views.py
owners/: admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
parkings/: admin.py  models.py  tasks.py  tests.py  urls.py  validators.py  views.py
parkpass/: celery.py  settings.py  urls.py  wsgi.py
(+481 files in other folders)
